# interface-region-imaging-spectrograph

./: README.md  convert_raster_to_sitandstare.py  pyproject.toml  split_cubes.ipynb  split_fits.py
.github/workflows/: black.yml  publish.yml  tests.yml
docs/: conf.py  index.rst  refs.bib
iris/: __init__.py  _caching.py  data.py  planning.py  test_jsoc.ipynb
iris/_spectrograph/: _spectrograph.py  _spectrograph_test.py
iris/_tests/: test_data.py  test_planning.py
iris/response/: __init__.py  _response.py  _response_test.py
iris/sg/: __init__.py  _effective_area.py  _effective_area_test.py  _sg.py  _sg_test.py  _spectrograph.py  _spectrograph_test.py  background.py
iris/sg/background/: __init__.py  _background.py  _background_test.py
iris/spectrograph/: __init__.py
